2004-05-10  Matthias Clasen  <mclasen@redhat.com>

	Merge from 2.4:
	
	* glib/gmain.c (block_source, unblock_source): Make these 
	static.  (#142230, Morten Welinder)

2004-05-10  Tor Lillqvist  <tml@iki.fi>

	* glib/giowin32.c (g_win32_print_gioflags): Remove two duplicated
	lines. Thanks to Benoît Carpentier.

Sun May  9 02:04:14 2004  Matthias Clasen  <maclas@gmx.de>

	Merge from 2.4:
	
	* glib/guniprop.c (g_utf8_casefold): Avoid an unnecessary
	memleak.  (#141998, Nikolai Weibull)

Sat May  8 23:02:26 2004  Matthias Clasen  <maclas@gmx.de>

	Merge from 2.4:
	
	* glib/gutils.h: Remove vestigial g_get_codeset().
	* glib/gutils.c (g_get_codeset): Call g_get_charset().
	(#137703, Owen Taylor)

2004-05-06  Matthias Clasen  <mclasen@redhat.com>

	* configure.in: Bump version number to 2.5.0.

Wed May  5 23:35:44 2004  Matthias Clasen  <maclas@gmx.de>

	* glib/gconvert.c (g_filename_from_uri): Quote the file
	scheme to mark it as untranslatable. String change.  
	(#133144, Danilo Segan)

2004-05-03  Pablo Saratxaga  <pablo@mandrakesoft.com>

	* configure.in: Added Walloon (wa) to ALL_LINGUAS

Sun May  2 03:51:59 2004  Manish Singh  <yosh@gimp.org>

	* glib/gtypes.h: check for __pentium4__ when deciding whether to
	use bswap for GUINT32_SWAP_LE_BE_IA32(). Fixes bug #141620.

2004-05-01  Hans Breuer  <hans@breuer.org>

	* glib/gnulib/Makefile.am : added makefile.msc to EXTRA_DIST
	fixes #141563, Steve Lhomme

2004-04-30  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.4.1 ===

	* configure.in: Version 2.4.1, interface age 1. 

	* NEWS: Updates
	
2004-04-25  Tor Lillqvist  <tml@iki.fi>

	* glib/gwin32.c (g_win32_get_package_installation_subdirectory):
	Plug memory leak. (#140770, John Ehresman)

2004-04-23  Matthias Clasen  <mclasen@redhat.com>

	* glib/libcharset/localcharset.c (_g_locale_get_charset_aliases): 
	Reinstate LIBCHARSET_ALIAS_DIR support which got lost at some
	point.  (#139134, Piotr Klaban)
